--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                class="h-10 w-10 object-contain bg-white p-1 shadow-md">
         </a>
         <h1 class="text-xl md:text-2xl font-bold flex items-center whitespace-nowrap">
-          <i class="fas fa-gamepad mr-2"></i> Maersk Carrom Leaderboard
+          Maersk Carrom Leaderboard
         </h1>
       </div>
       <button class="menu-toggle text-2xl md:hidden focus:outline-none">
@@ -84,12 +84,6 @@
             Note: Replace with actual embed code from Google Sheets (Publish to web, select top 5 rows, e.g., add &range=A2:Z6 to iframe src).
           </p>
         </div>
-      </div>
-      <div class="text-center">
-        <img src="https://images.unsplash.com/photo-1622288438847-3043f4853e94?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
-             alt="Carrom Board" 
-             class="mx-auto rounded-lg shadow-md mb-4 w-full max-w-sm">
-        <p class="text-lg font-medium">Carrom Board</p>
       </div>
     </section>
   </main>
