--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Maersk Carrom Leaderboard</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="icon" type="image/png" href="logo.png" />
+  <link rel="icon" href="logo.png" />
   <style>
     .hero-bg {
       background-image: url('https://images.unsplash.com/photo-1591294100768-80106e6e6f6a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
@@ -46,14 +46,10 @@
   <header class="custom-color text-white py-4 sticky top-0 z-50 shadow-md">
     <div class="container mx-auto px-4 flex justify-between items-center">
       <div class="flex items-center space-x-3">
-        <a href="index.html" aria-label="Maersk Home">
-          <img src="https://adnan-chow.github.io/MaerskCL.github.io/logo.png"
-               alt="Maersk Logo"
-               class="h-10 w-10 object-contain bg-white p-1 shadow-md">
+        <a href="index.html">
+          <img src="https://adnan-chow.github.io/MaerskCL.github.io/logo.png" alt="Maersk Logo" class="h-10 w-10 bg-white p-1 shadow-md">
         </a>
-        <h1 class="text-xl md:text-2xl font-bold flex items-center whitespace-nowrap">
-          Maersk Carrom Leaderboard
-        </h1>
+        <h1 class="text-xl md:text-2xl font-bold">Maersk Carrom Leaderboard</h1>
       </div>
       <button class="menu-toggle text-2xl md:hidden focus:outline-none">
         <i class="fas fa-bars"></i>
@@ -61,6 +57,9 @@
       <nav class="nav-menu w-full md:w-auto md:flex md:space-x-4 flex-col md:flex-row absolute md:static custom-color md:bg-transparent left-0 top-16 md:top-0 px-4 md:px-0">
         <a href="leaderboard.html" class="btn custom-color custom-color-hover text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
           <i class="fas fa-trophy mr-2"></i> Leaderboard
+        </a>
+        <a href="match-history.html" class="btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-history mr-2"></i> Match History
         </a>
         <a href="submit-match.html" class="btn bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
           <i class="fas fa-paper-plane mr-2"></i> Submit Match
@@ -79,7 +78,9 @@
           <i class="fas fa-chart-line mr-2 text-blue-600"></i> Leaderboard Preview (Top 5)
         </h2>
         <div class="embed-container">
-          <p class="text-gray-600 text-sm">[Embed Google Sheets "Maersk Carrom Leaderboard" - Leaderboard tab, Top 5 rows here]</p>
+          <p class="text-gray-600 text-sm">
+            [Embed Google Sheets "Maersk Carrom Leaderboard" – Leaderboard tab, Top 5 rows here]
+          </p>
           <p class="text-xs text-gray-500">
             Note: Replace with actual embed code from Google Sheets (Publish to web, select top 5 rows, e.g., add &range=A2:Z6 to iframe src).
           </p>
