--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         <i class="fas fa-bars"></i>
       </button>
       <nav class="nav-menu w-full md:w-auto md:flex md:space-x-4 flex-col md:flex-row absolute md:static custom-color md:bg-transparent left-0 top-16 md:top-0 px-4 md:px-0">
-        <a href="leaderboard.html" class="btn custom-color custom-color-hover text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+        <a href="index.html" class="btn custom-color custom-color-hover text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-home mr-2"></i> Home
+        </a>
+        <a href="leaderboard.html" class="btn bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
           <i class="fas fa-trophy mr-2"></i> Leaderboard
         </a>
         <a href="match-history.html" class="btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
@@ -90,7 +93,7 @@
   </main>
 
   <footer class="custom-color text-white text-center py-4">
-    <p>© 2025 Maersk Carrom League</p>
+    <p>© 2025 powered by Adnan(MAC212)</p>
   </footer>
 
   <script>
