--- a/match-history.html
+++ b/match-history.html
@@ -6,6 +6,7 @@
   <title>Match History - Maersk Carrom</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="icon" href="logo.png" />
   <style>
     .embed-container iframe {
       width: 100%;
@@ -39,9 +40,12 @@
 <body class="bg-gray-100 font-sans">
   <header class="custom-color text-white py-4 sticky top-0 z-50 shadow-md">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-xl md:text-2xl font-bold flex items-center">
-        <i class="fas fa-gamepad mr-2"></i> Maersk Carrom Leaderboard
-      </h1>
+      <div class="flex items-center space-x-3">
+        <a href="index.html">
+          <img src="https://adnan-chow.github.io/MaerskCL.github.io/logo.png" alt="Maersk Logo" class="h-10 w-10 bg-white p-1 shadow-md">
+        </a>
+        <h1 class="text-xl md:text-2xl font-bold">Maersk Carrom Leaderboard</h1>
+      </div>
       <button class="menu-toggle text-2xl md:hidden focus:outline-none">
         <i class="fas fa-bars"></i>
       </button>
@@ -72,15 +76,14 @@
           <i class="fas fa-history mr-2 text-yellow-600"></i> Match History (Last 30 Days)
         </h2>
         <div class="embed-container">
-          <!-- Replace with actual Google Sheets embed link -->
-          <iframe src="https://docs.google.com/spreadsheets/d/e/YOUR_SHEET_ID_HERE/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+          <iframe src="https://docs.google.com/spreadsheets/d/e/YOUR_SHEET_ID_HERE/pubhtml?gid=0&single=true&widget=true&headers=false"></iframe>
         </div>
       </div>
     </section>
   </main>
 
   <footer class="custom-color text-white text-center py-4">
-    <p>© 2025 Maersk Carrom League</p>
+    <p>© 2025 powered by Adnan (MAC212)</p>
   </footer>
 
   <script>
