--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <i class="fas fa-history mr-2"></i> Match History
         </a>
         <a href="submit-match.html" class="btn bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-          <i class="fas fa-paper-plane mr-2"></i> Submit Match
+          <i class="fas fa-paper-plane mr-2"></i> Submit Result
         </a>
         <a href="rules.html" class="btn bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
           <i class="fas fa-book mr-2"></i> Rules
