--- a/submit-match.html
+++ b/submit-match.html
@@ -35,7 +35,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit Match - Maersk Carrom</title>
+    <title>Submit Result - Maersk Carrom</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="logo.png" />
@@ -92,7 +92,7 @@
                     <i class="fas fa-history mr-2"></i> Match History
                 </a>
                 <a href="submit-match.html" class="btn bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-paper-plane mr-2"></i> Submit Match
+                    <i class="fas fa-paper-plane mr-2"></i> Submit Result
                 </a>
                 <a href="rules.html" class="btn bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
                     <i class="fas fa-book mr-2"></i> Rules
@@ -104,7 +104,7 @@
         <section class="container mx-auto px-4">
             <div class="bg-white rounded-lg shadow-lg p-6">
                 <h2 class="text-xl md:text-2xl font-semibold mb-3 flex items-center">
-                    <i class="fas fa-paper-plane mr-2 text-green-600"></i> Submit Match
+                    <i class="fas fa-paper-plane mr-2 text-green-600"></i> Submit Result
                 </h2>
                 <div class="embed-container">
                     <p class="text-gray-600 text-sm">[Embed Google Form for match submission here]</p>
