--- a/submit-match.html
+++ b/submit-match.html
@@ -1,130 +1,121 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit Result - Maersk Carrom</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="logo.png" />
-    <style>
-        .embed-container iframe {
-            width: 100%;
-            min-height: 400px;
-        }
-        .nav-menu {
-            transition: max-height 0.3s ease-in-out;
-            max-height: 0;
-            overflow: hidden;
-        }
-        .nav-menu.active {
-            max-height: 500px;
-        }
-        .custom-color {
-            background-color: rgba(66,176,213,255);
-        }
-        .custom-color-hover:hover {
-            background-color: rgba(38,156,191,255);
-        }
-        @media (min-width: 768px) {
-            .nav-menu {
-                max-height: none;
-                overflow: visible;
-            }
-            .menu-toggle {
-                display: none;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Submit Result - Maersk Carrom</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="icon" href="logo.png" />
+  <style>
+    .embed-container iframe {
+      width: 100%;
+      border: none;
+      min-height: 600px;
+      border-radius: 0.5rem;
+    }
+
+    .nav-menu {
+      transition: max-height 0.3s ease-in-out;
+      max-height: 0;
+      overflow: hidden;
+    }
+
+    .nav-menu.active {
+      max-height: 500px;
+    }
+
+    .custom-color {
+      background-color: rgba(66,176,213,255);
+    }
+
+    .custom-color-hover:hover {
+      background-color: rgba(38,156,191,255);
+    }
+
+    @media (min-width: 768px) {
+      .nav-menu {
+        max-height: none;
+        overflow: visible;
+      }
+      .menu-toggle {
+        display: none;
+      }
+    }
+  </style>
 </head>
 <body class="bg-gray-100 font-sans">
-    <header class="custom-color text-white py-4 sticky top-0 z-50 shadow-md">
-        <div class="container mx-auto px-4 flex justify-between items-center">
-            <div class="flex items-center space-x-3">
-                <a href="index.html">
-                    <img src="https://adnan-chow.github.io/MaerskCL.github.io/logo.png" alt="Maersk Logo" class="h-10 w-10 bg-white p-1 shadow-md">
-                </a>
-                <h1 class="text-xl md:text-2xl font-bold">Maersk Carrom Leaderboard</h1>
-            </div>
-            <button class="menu-toggle text-2xl md:hidden focus:outline-none">
-                <i class="fas fa-bars"></i>
-            </button>
-            <nav class="nav-menu w-full md:w-auto md:flex md:space-x-4 flex-col md:flex-row absolute md:static custom-color md:bg-transparent left-0 top-16 md:top-0 px-4 md:px-0">
-                <a href="index.html" class="btn custom-color custom-color-hover text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-home mr-2"></i> Home
-                </a>
-                <a href="leaderboard.html" class="btn bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-trophy mr-2"></i> Leaderboard
-                </a>
-                <a href="match-history.html" class="btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-history mr-2"></i> Match History
-                </a>
-                <a href="submit-match.html" class="btn bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-paper-plane mr-2"></i> Submit Result
-                </a>
-                <a href="rules.html" class="btn bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
-                    <i class="fas fa-book mr-2"></i> Rules
-                </a>
-            </nav>
+  <header class="custom-color text-white py-4 sticky top-0 z-50 shadow-md">
+    <div class="container mx-auto px-4 flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <a href="index.html">
+          <img src="https://adnan-chow.github.io/MaerskCL.github.io/logo.png" alt="Maersk Logo" class="h-10 w-10 bg-white p-1 shadow-md rounded-full" />
+        </a>
+        <h1 class="text-xl md:text-2xl font-bold">Maersk Carrom Leaderboard</h1>
+      </div>
+      <button class="menu-toggle text-2xl md:hidden focus:outline-none">
+        <i class="fas fa-bars"></i>
+      </button>
+      <nav class="nav-menu w-full md:w-auto md:flex md:space-x-4 flex-col md:flex-row absolute md:static custom-color md:bg-transparent left-0 top-16 md:top-0 px-4 md:px-0">
+        <a href="index.html" class="btn custom-color custom-color-hover text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-home mr-2"></i> Home
+        </a>
+        <a href="leaderboard.html" class="btn bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-trophy mr-2"></i> Leaderboard
+        </a>
+        <a href="match-history.html" class="btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-history mr-2"></i> Match History
+        </a>
+        <a href="submit-match.html" class="btn bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-paper-plane mr-2"></i> Submit Result
+        </a>
+        <a href="rules.html" class="btn bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded flex items-center my-2 md:my-0">
+          <i class="fas fa-book mr-2"></i> Rules
+        </a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="py-6 px-4">
+    <section class="container mx-auto max-w-3xl">
+      <div class="bg-white rounded-lg shadow-lg p-4 md:p-6">
+        <h2 class="text-xl md:text-2xl font-semibold mb-4 flex items-center text-green-700">
+          <i class="fas fa-paper-plane mr-2"></i> Submit Match Result
+        </h2>
+        <p class="text-sm text-gray-600 mb-2">
+          Please fill in the form below to submit your match result.
+        </p>
+
+        <!-- ✅ Embedded Google Form -->
+        <div class="embed-container">
+          <iframe 
+            src="https://docs.google.com/forms/d/e/1FAIpQLSchHLyfG4B-yls1alE-7H69CkuZmC80otuX0p3Yj2_3m04Pyw/viewform?embedded=true"
+            width="100%"
+            height="800"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0"
+            allowfullscreen>
+            Loading…
+          </iframe>
         </div>
-    </header>
-    <main class="py-8">
-        <section class="container mx-auto px-4">
-            <div class="bg-white rounded-lg shadow-lg p-6">
-                <h2 class="text-xl md:text-2xl font-semibold mb-3 flex items-center">
-                    <i class="fas fa-paper-plane mr-2 text-green-600"></i> Submit Result
-                </h2>
-                <div class="embed-container">
-                    <p class="text-gray-600 text-sm">[Embed Google Form for match submission here]</p>
-                    <p class="text-xs text-gray-500">Note: Replace with actual embed code from Google Forms (Share > Embed).</p>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="custom-color text-white text-center py-4">
-        <p>© 2025 powered by Adnan (MAC212)</p>
-    </footer>
-    <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navMenu = document.querySelector('.nav-menu');
-        menuToggle.addEventListener('click', () => {
-            navMenu.classList.toggle('active');
-            const icon = menuToggle.querySelector('i');
-            icon.classList.toggle('fa-bars');
-            icon.classList.toggle('fa-times');
-        });
-    </script>
+      </div>
+    </section>
+  </main>
+
+  <footer class="custom-color text-white text-center py-4 mt-6">
+    <p>© 2025 powered by Adnan (MAC212)</p>
+  </footer>
+
+  <script>
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navMenu = document.querySelector('.nav-menu');
+    menuToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+      const icon = menuToggle.querySelector('i');
+      icon.classList.toggle('fa-bars');
+      icon.classList.toggle('fa-times');
+    });
+  </script>
 </body>
 </html>
