--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,35 +1,3 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -107,8 +75,12 @@
                     <i class="fas fa-trophy mr-2 text-yellow-500"></i> Full Leaderboard
                 </h2>
                 <div class="embed-container">
-                    <p class="text-gray-600 text-sm">[Embed Google Sheets "Maersk Carrom Leaderboard" - Leaderboard tab, full table here]</p>
-                    <p class="text-xs text-gray-500">Note: Replace with actual embed code from Google Sheets (Publish to web, full table).</p>
+                    <iframe 
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS9BhBkUQLvNnghqE0F7pU8ccZ50xZoaSTREfnkQqcpFBzWqIlpjSjLqkHlV8BdaBbI4lU4GS7BM9qI/pubhtml?gid=1995892772&amp;single=true&amp;range=A1:G21&amp;widget=true&amp;headers=false" 
+                        width="100%" 
+                        height="500" 
+                        frameborder="0">
+                    </iframe>
                 </div>
             </div>
         </section>
